# Calculator

./: .gitignore  Calculator.spec  calculator_engine.py  calculator_ui.py  generate_icon.py  help_content.py  main.py  pyproject.toml  成品.txt
.claude/: settings.local.json
changes/: v2.0.0.md
tests/: test_engine.py
