[project]
name = "calculator"
version = "2.0.0"
description = "A scientific and programmer calculator built with tkinter"
authors = [{ name = "hang.shi", email = "hangshi1023@gmail.com" }]
requires-python = ">=3.12"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
